--- a/port.css
+++ b/port.css
@@ -387,7 +387,7 @@ div.card{
 }
 .project_card a{
     font-size: larger;
-    color: red;
+    color: white;
 }
 @media screen and(max-width:820px){
     h1.project_section{
