--- a/port.css
+++ b/port.css
@@ -1,658 +1,272 @@
-
-*
-{
-  margin: 0px;
-  padding: 0px;
+/* RESET & GLOBAL */
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   scroll-behavior: smooth;
 }
-body{
-    background-color: black;
+body {
+  background-color: black;
+  color: white;
+  line-height: 1.6;
 }
-nav{
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    top: 0;
-    width: 100%;
-    color: white;
-    font-size: 20px;
-    overflow: hidden;
-    padding: 10px;
-    position: fixed;
-    z-index: 1000;
+
+/* NAVBAR */
+nav {
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 50px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
-.nav_head{
-    font-size: 35px;
-    letter-spacing: 1px;
+.nav_head {
+  font-size: 28px;
+  font-weight: bold;
 }
-li{
-    display: flex;
-    float: inline-start;
-    overflow: hidden;
+nav ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
 }
-li a{
-    padding: 15px;
-    display: block;
-    color: white;
+nav ul li a {
+  color: white;
+  font-size: 18px;
+  padding: 8px 12px;
+  transition: 0.3s;
 }
-li a:hover{
-    color: red;
+nav ul li a:hover {
+  color: red;
 }
-.contact_btn{
-    padding: 10px 30px;
-    color: black;
-    margin-left: 8rem;
-    border-radius: 30px;
-    font-size: large;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+.contact_btn {
+  padding: 10px 25px;
+  border-radius: 25px;
+  border: 2px solid red;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s;
 }
-.contact_btn:hover{
-    color: white;
-    border: 3px solid red;
-    background: transparent;
-}
-.checkbtn{
-    font-size: 30px;
-    float: right;
-    margin-right: 30px;
-    cursor: pointer;
-    display: none;
-}
-.checkbox{
-    display: none;
-}
-.github-link {
+.contact_btn:hover {
+  background: red;
   color: black;
-  text-decoration: none; /* Optional: removes underline */
 }
 
-@media screen and(max-width:952px){
-    .nav_head{
-        font-size: 30px;
-    }
-    nav li a{
-        font-size: 18px;
-    }
-    nav .contact_btn{
-        margin-left: 20px;
-    }
+/* MOBILE MENU */
+.checkbtn {
+  font-size: 28px;
+  display: none;
+  cursor: pointer;
 }
-@media screen and(max-width:820px){
-    .checkbtn{
-        display: block;
-        margin-left: 150px;
-    }
-    nav li a{
-        font-size: 18px;
-    }
-    nav .contact_btn{
-        margin-left: 20px;
-    }
-    .nav_head{
-        padding-left: 10px;
-    }
-    nav ul{
-        z-index: 1000;
-        position: fixed;
-        width: 60%;
-        height: 50vh;
-        background-color: black;
-        top: 50px; right:-100%;
-        padding: 20px;
-        transition: all .5s;
-    }
-    nav li{
-        text-align: center;
-        display: block;
-        float: left;
-        width: 300px;
-        height: 60px;
-        padding: 5px;
-    }
-    nav.contact_btn{
-        width: 90%;
-    }
-    nav li a{
-        font-size: 20px;
-        color: white;
-    }
-    .checkbox:checked ~ ul{
-        right: 0;
-    }
-}
-.home{
-    padding: 220px 100px;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    gap: 5rem;
-}
-.description{
-    padding-top: 20px;
-}
-.description h1{
-    font-size: 30px;
-    font-weight: 700;
-}
-.description h1 span{
-    color: red;
-    position: 55px;
-}
-.description h2{
-    margin-top: 20px;
-    font-size: 30px;
-    font-weight: 900;
-}
-.description h2 span{
-    color: red;
-    position: relative;
-}
-.description h2 span:after{
-    
-    content: "";
-    position: absolute;
-    left:0 ;
-    right: 0px;
-    height: 100%;
-    border-left: 4px solid red;
-    background-color: black;
-    animation: text 3s infinite backwards steps(10);
-    
-}
-.description p{
-    width: 500px;
-    margin-top: 20px;
-}
-@keyframes text{
-    0%{
-        left:0;
-
-    }
-    50%{
-        left:100%;
-    }
-    100%{
-        left: 0;
-
-    }
-}
-.font i{
-    margin: 25px 8px;
-    border: 3px solid red;
-    border-radius: 50%;
-    padding: 13px;
-    font-size: 20px;
-    cursor: pointer;
-    transition: .4s ease-in-out;
-}
-.font i:hover{
-    background-color: red;
-    transform: translateY(-15px);
-    box-shadow: 0px 0px 15px red;
-}
-.description button{
-    padding: 13px 20px;
-    font-size: 20px;
-    border-radius: 10px;
-    background: linear-gradient(145deg,red,yellow);
-    cursor: pointer;
-    border: none;
-    
+.checkbox {
+  display: none;
 }
 
-.home img{
-    background-color: red;
-    padding: 10px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 30px red;
-    filter: brightness(1.1);
-    transition: .4s ease-in-out;
-}
-.home img:hover{
-    box-shadow: 0px 0px 50px red;
-}
-@keyframes animate{
-    0%{
-        transform: translateY(0px);
-
-    }
-    50%{
-        transform: translateY(-15px);
-
-    }
-    100%{
-        transform: translateY(0px);
-
-
-    }
-
-}
-@media screen  and (max-width:820px){
-    .home img{
-        margin-top: -7rem;
-        margin-left: -1rem;
-        margin-bottom: -5rem;
-        width: 390px;
-        height: 340px;
-    }
-
-    .home{
-        grid-template-columns: 1fr;
-        flex-wrap: wrap;
-    }
-    .description{
-        font-size: 25px;
-    }
-    .description h1{
-        font-size: 25px;
-    }
-    .description h1 span{
-        font-size: 40px;
-    }
-    .description h2{
-        font-size: 25px;
-    }
-    .description p{
-        font-size: 15px;
-    }
-
-}
-.about{
-    display: flex;
-    justify-content: space-around;
-    margin: 100px 150px;
-    gap:60px;
-    padding-top: 100px;
-    color: white;
-}
-.about_photo img{
-    background-color: red;
-    padding: 10px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 30px red;
-    filter: brightness(1.1);
-    animation: animate1 2.5s ease-in-out infinite;
-}
-@keyframes animate1 {
-    0%{
-        transform: translateY(0px);
-
-    }
-    50%{
-        transform: translateY(-15px);
-
-    }
-    100%{
-        transform: translateY(0px);
-
-
-    }
-    
-}
-.about_section{
-    margin-bottom: 30px;
-}
-.about_section h1{
-    font-size: 50px;
-}
-.about_section h2{
-    margin-top: 10px;
-}
-.about_section span{
-   color: red;
-}
-.about_section p{
-    margin-top: 15px;
-}
-.about_button{
-    font-size: 20px;
-    background-color: red;
-    margin-top: 25px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 15px red;
-    border: none;
-    cursor: pointer;
-}
-@media screen  and (max-width: 820px){
-    .about{
-        display: block;
-        margin-top: -13rem;
-    }
-    .about_section{
-        margin-left: -6rem;
-        width:470px;
-    }
-    .about_section h1{
-        font-size: 35px;
-    }
-    .about_photo{
-        width: 200px;
-        height: 250px;
-        margin: 50px -70px;
-    }
-    .about_button{
-        padding: 10px 20px;
-        font-size: 18px;
-    }
-
-}
-
-
-
-
-h1.project_section{
-    margin-top: 15rem;
-    color: white;
-    font-size: 50px;
-    padding-top: 100px;
-    text-align: center;
-}
-h1.project_section span{
-    color: red;
-}
-div.card{
-    justify-content: space-around;
+@media screen and (max-width: 820px) {
+  nav ul {
+    position: fixed;
+    top: 60px;
+    right: -100%;
+    background: black;
+    width: 70%;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    padding-top: 40px;
     gap: 20px;
-    text-align: justify;
-    margin: 70px;
-    color:white;
-
-}
-.project_card{
-    background-color: black;
-    padding: 30px;
-    border-radius: 10px;
-    transition: .5s ease;
-}
-.project_card:hover{
-    border: 2px solid red;
-    background-color: red;
-    transform: translateY(-20px);
-}
-.project_card i{
-    font-size: 40px;
-    color: red;
-} 
-.project_card h2{
-    font-size: 30px;
-    margin-top: 10px;
-}
-.project_card p{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-.project_card a{
-    font-size: larger;
-    color: white;
-}
-@media screen and(max-width:820px){
-    h1.project_section{
-        font-size: 35px;
-        margin-bottom: -40px;
-    }
-    .card{
-        grid-template-columns: 1fr;
-        flex-wrap: wrap;
-    }
-    .project_card{
-        margin-top: 20px;
-    }
-    .project_card h2{
-        font-size: 25px;
-    }
+    transition: 0.5s;
+  }
+  .checkbox:checked ~ ul {
+    right: 0;
+  }
+  .checkbtn {
+    display: block;
+  }
 }
 
-
-h1.skills_section{
-    margin-top: 15rem;
-    color: white;
-    font-size: 50px;
-    padding-top: 100px;
-    text-align: center;
+/* HOME SECTION */
+.home {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding: 150px 50px 80px;
 }
-h1.skills_section span{
-    color: red;
+.home img {
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  border: 4px solid red;
+  box-shadow: 0 0 30px red;
+  transition: 0.4s;
 }
-div.card{
-    justify-content: space-around;
-    gap: 20px;
-    text-align: justify;
-    margin: 70px;
-    color:white;
-
+.home img:hover {
+  box-shadow: 0 0 50px red;
 }
-.skills_card{
-    background-color: black;
-    padding: 30px;
-    border-radius: 10px;
-    transition: .5s ease;
+.description h1 {
+  font-size: 32px;
+  margin-bottom: 10px;
 }
-.skills_card:hover{
-    border: 2px solid red;
-    background-color: red;
-    transform: translateY(-20px);
+.description h1 span {
+  color: red;
 }
-.skills_card i{
-    font-size: 40px;
-    color: red;
-} 
-.skills_card h2{
-    font-size: 30px;
-    margin-top: 10px;
+.description h2 {
+  font-size: 26px;
+  margin-bottom: 15px;
 }
-.skills_card p{
-    margin-top: 10px;
-    margin-bottom: 10px;
+.description h2 span {
+  color: red;
 }
-.skills_card a{
-    font-size: larger;
-    color: red;
+.description p {
+  max-width: 500px;
+  margin-bottom: 20px;
 }
-@media screen and(max-width:820px){
-    h1.skills_section{
-        font-size: 35px;
-        margin-bottom: -40px;
-    }
-    .card{
-        grid-template-columns: 1fr;
-        flex-wrap: wrap;
-    }
-    .skills_card{
-        margin-top: 20px;
-    }
-    .skills_card h2{
-        font-size: 25px;
-    }
+.font i {
+  margin: 10px;
+  border: 2px solid red;
+  border-radius: 50%;
+  padding: 12px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.font i:hover {
+  background: red;
+  color: black;
+  transform: translateY(-5px);
+  box-shadow: 0 0 15px red;
 }
 
-
-.form h1{
-    margin:150px 0px 40px 0px;
-    text-align: center;
-    padding-right: 100px;
-    color: white;
-    font-size: 50px;
-    padding-top: 80px;
-}
-.form h1 span{
-    color: red;
-}
-.form input,textarea{
-    width: 500px;
-    margin: 10px 340px;
-    padding: 15px;
-    background-color: rgba(77, 63, 63, 0.845);
-    font-size: 18px;
-    color: white;
-    border: none;
-    border-radius: 5px;
-}
-button{
-    padding: 13px 20px;
-    font-size: 20px;
-    border-radius: 10px;
-    background: linear-gradient(145deg,red,yellow);
-    cursor: pointer;
-    border: none;
-    
-}
-.form .form_btn{
-    padding: 15px 50px;
-    font-size: 20px;
-    background-color: red;
-    margin: 1.5rem 33rem;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px red;
-    cursor: pointer;
-    border: none;
-    transition: .3s ease;
-}
-.form.form_btn:hover{
-    background: transparent;
-    border: 2px solid red;
-    color: white;
-}
-.footer{
-    margin-top: 20px;
-    background-color: black;
-    color: white;
-    padding: 30px;
-    font-size: 20px;
-    text-align: center;
-}
-*::selection{
-    background-color: red;
-}
-
-@media screen and(max-width:820px) {
-    .form h1{
-        font-size: 35px;
-    }
-    .form input,textarea{
-        margin-left: 50px;
-        width:450px;
-    }
-    .form.form_btn{
-        margin-left: 14rem;
-        padding: 10px 25px;
-        font-size: 18px;
-    }
-    
-}
 /* EXPERIENCE SECTION */
 .experience {
-    margin-top: 15rem;
-    padding: 80px 0;
-    background-color: black;
-    text-align: center;
+  padding: 100px 20px;
+  background: black;
+  text-align: center;
 }
-
-/* Heading */
 h1.experience_section {
-    font-size: 50px;
-    font-weight: bold;
-    color: white;
-    margin-bottom: 60px;
+  font-size: 40px;
+  margin-bottom: 50px;
 }
-
 h1.experience_section span {
-    color: red;
+  color: red;
 }
-
-/* Experience Card Container */
 .experience_card {
-    background-color: #111;
-    padding: 40px;
-    margin: 30px auto;
-    max-width: 900px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 25px rgba(255, 0, 0, 0.3);
-    text-align: left;
-    transition: all 0.4s ease-in-out;
-    border: 2px solid transparent;
-    display: block;
+  background: #111;
+  margin: 20px auto;
+  padding: 30px;
+  max-width: 800px;
+  border-radius: 15px;
+  transition: 0.4s;
 }
-
-/* Hover effect — entire card goes red */
 .experience_card:hover {
-    background-color: red;
-    border-color: red;
-    color: white;
-    transform: translateY(-10px);
-    box-shadow: 0px 0px 35px rgba(255, 0, 0, 0.6);
+  background: red;
+  color: white;
+  transform: translateY(-8px);
+  box-shadow: 0 0 25px rgba(255,0,0,0.6);
 }
-
-/* Job title */
 .experience_card h3 {
-    font-size: 32px;
-    color: red;
-    margin-bottom: 15px;
-    transition: color 0.3s ease-in-out;
+  font-size: 28px;
+  color: red;
+  margin-bottom: 12px;
 }
-
 .experience_card:hover h3 {
-    color: white;
+  color: white;
 }
-
-/* Company and role info */
 .experience_card p {
-    font-size: 20px;
-    margin-bottom: 15px;
-    color: #ccc;
-    line-height: 1.8;
-    transition: color 0.3s ease-in-out;
+  font-size: 18px;
+  color: #ccc;
+  margin-bottom: 12px;
 }
-
-.experience_card:hover p {
-    color: white;
-}
-
-/* List of work responsibilities */
 .experience_card ul {
-    padding-left: 25px;
-    margin-top: 10px;
+  padding-left: 20px;
 }
-
 .experience_card ul li {
-    font-size: 18px;
-    margin-bottom: 12px;
-    line-height: 1.8;
-    list-style: disc;
-    color: #bbb;
-    transition: color 0.3s ease-in-out;
+  font-size: 16px;
+  margin-bottom: 8px;
+  color: #aaa;
 }
-
 .experience_card:hover ul li {
-    color: white;
+  color: white;
 }
 
-/* RESPONSIVE EXPERIENCE SECTION */
-@media screen and (max-width: 820px) {
-    h1.experience_section {
-        font-size: 36px;
-        margin-bottom: 40px;
-    }
+/* PROJECTS & SKILLS */
+.projects, .skills {
+  padding: 100px 20px;
+  text-align: center;
+}
+.project_section, .skills_section {
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+.project_section span, .skills_section span {
+  color: red;
+}
+.card {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+  gap: 20px;
+}
+.project_card, .skills_card {
+  background: #111;
+  padding: 30px;
+  border-radius: 12px;
+  transition: 0.3s;
+}
+.project_card:hover, .skills_card:hover {
+  background: red;
+  color: white;
+  transform: translateY(-8px);
+  box-shadow: 0 0 20px rgba(255,0,0,0.5);
+}
 
-    .experience_card {
-        width: 90%;
-        padding: 25px;
-        margin: 25px auto;
-    }
+/* CONTACT FORM */
+.contact {
+  padding: 100px 20px;
+  text-align: center;
+}
+.form h1 {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+.form input, textarea {
+  width: 100%;
+  max-width: 500px;
+  margin: 10px auto;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  background: #222;
+  color: white;
+}
+.form_btn {
+  padding: 12px 30px;
+  background: red;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.form_btn:hover {
+  background: transparent;
+  border: 2px solid red;
+}
 
-    .experience_card h3 {
-        font-size: 26px;
-    }
-
-    .experience_card p {
-        font-size: 17px;
-    }
-
-    .experience_card ul li {
-        font-size: 16px;
-    }
+/* FOOTER */
+.footer {
+  background: black;
+  text-align: center;
+  padding: 25px;
+  font-size: 16px;
+  color: #bbb;
+}
+.footer i {
+  color: red;
 }
